--- a/Lzw-Surge.conf
+++ b/Lzw-Surge.conf
@@ -79,7 +79,7 @@ udp-policy-not-supported-behaviour = reject
 
 🇸🇬 新加坡节点 = smart, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇸🇬)|(新加坡)|(Singapore)|(SG), icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Singapore.png
 
-✈️ 我的节点 = select, policy-path=你的订阅地址, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Universal/Final.png
+✈️ 我的节点 = select, policy-path=https://login.yfjc.xyz/api/v1/client/subscribe?token=8825fab90c0b30b3fb3ec33ca86f5d39, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Universal/Final.png
 
 [Rule]
 # > 全球直连
