--- a/Lzw-Surge.conf
+++ b/Lzw-Surge.conf
@@ -67,6 +67,7 @@ udp-policy-not-supported-behaviour = reject
 微软服务 = select, DIRECT, 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Windows_11.png
 游戏平台 = select, DIRECT, 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Game.png
 智能助理 = select, 节点选择, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/chxm1023/ChatGPT5.png
+全球直连 = select, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/ForeignMedia.png
 
 # > 外部节点
 🇭🇰 香港节点 = smart, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇭🇰)|(香港)|(Hong)|(HK), icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Hong_Kong.png
@@ -84,8 +85,8 @@ udp-policy-not-supported-behaviour = reject
 [Rule]
 # > 全球直连
 RULE-SET,https://raw.githubusercontent.com/lzwsgdsg29/rule/refs/heads/main/Direct.list,全球直连
-# > 国外媒体
-RULE-SET,https://raw.githubusercontent.com/lzwsgdsg29/rule/refs/heads/main/ProxyLite.list,国外媒体
+# > 节点选择
+RULE-SET,https://raw.githubusercontent.com/lzwsgdsg29/rule/refs/heads/main/ProxyLite.list,节点选择
 # > 苹果服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple_All_No_Resolve.list,苹果服务
 # > GitHub
